# endless_prime

./: README.md  pyproject.toml  requirements.txt
endless_prime/: calc.py  server.py
tests/: test_calc.py
